src/piece_chain.c3i

module piece_chain;

typedef PieceChain = void;
typedef PieceChainIterator = void;

struct Error @cname("PieceChainError_t") {
    ZString message;
    int err;
}

enum SaveMode : const CInt @cname("PieceChainSaveMode") {
    AUTO = 0,
    ATOMIC = 1,
    INPLACE = 2,
}

<* @param [&out] data *>
alias Visitor = fn bool(PieceChain* self, usz offset, ZString data, usz len, void* user);

<* @param [&in] path *>
extern fn PieceChain* create(char* path) @cname("piece_chain_open");
extern fn void PieceChain.destroy(PieceChain* self) @cname("piece_chain_destroy");

extern fn usz PieceChain.size(PieceChain* self) @cname("piece_chain_size");
extern fn bool PieceChain.dirty(PieceChain* self) @cname("piece_chain_dirty");
extern fn Error PieceChain.last_error(PieceChain* self) @cname("piece_chain_last_error");
<* @param [&in] path *>
extern fn bool PieceChain.save(PieceChain* self, ZString path, SaveMode mode) @cname("piece_chain_save");

<* @param [&in] data *>
extern fn bool PieceChain.insert(PieceChain* self, usz offset, ZString data, usz len) @cname("piece_chain_insert");
extern fn bool PieceChain.delete(PieceChain* self, usz offset, usz len) @cname("piece_chain_delete");
<* @param [&in] data *>
extern fn bool PieceChain.replace(PieceChain* self, usz offset, ZString data, usz len) @cname("piece_chain_replace");

extern fn bool PieceChain.commit(PieceChain* chain) @cname("piece_chain_commit");
<* @param [&out] pos *>
extern fn bool PieceChain.undo(PieceChain* self, usz* pos) @cname("piece_chain_undo");
<* @param [&out] pos *>
extern fn bool PieceChain.redo(PieceChain* self, usz* pos) @cname("piece_chain_redo");

<* @param [&out] out *>
extern fn bool PieceChain.read_byte(PieceChain* self, usz offset, ZString out) @cname("piece_chain_read_byte");
extern fn bool PieceChain.visit(PieceChain* self, usz start, usz len, Visitor visitor, void* user) @cname("piece_chain_visit");

extern fn PieceChainIterator* PieceChain.iter(PieceChain* self, usz start, usz len) @cname("piece_chain_iter");
extern fn PieceChainIterator* PieceChainIterator.clone(PieceChainIterator* self) @cname("piece_chain_iter_clone");
<*
 @param [&out] data
 @param [&out] len
*>
extern fn bool PieceChainIterator.next(PieceChainIterator* self, ZString* data, usz* len) @cname("piece_chain_iter_next");
extern fn void PieceChainIterator.free(PieceChainIterator* self) @cname("piece_chain_iter_free");
